# secp256k1-wrapper

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml  cmake-single-platform.yml  cmake.yml
cmake/: secp256k1-wrapperConfig.cmake.in
examples/: demo.c
include/: secp256k1_wrapper.h
src/: secp256k1_wrapper.c
tests/: test_wrapper.c
